; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-outputs/extr_null-output.c_null_output_destroy.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-outputs/extr_null-output.c_null_output_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.null_output = type { i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @null_output_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @null_output_destroy(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.null_output*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.null_output*
  store %struct.null_output* %5, %struct.null_output** %3, align 8
  %6 = load %struct.null_output*, %struct.null_output** %3, align 8
  %7 = getelementptr inbounds %struct.null_output, %struct.null_output* %6, i32 0, i32 1
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %15

10:                                               ; preds = %1
  %11 = load %struct.null_output*, %struct.null_output** %3, align 8
  %12 = getelementptr inbounds %struct.null_output, %struct.null_output* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = call i32 @pthread_join(i32 %13, i32* null)
  br label %15

15:                                               ; preds = %10, %1
  %16 = load %struct.null_output*, %struct.null_output** %3, align 8
  %17 = call i32 @bfree(%struct.null_output* %16)
  ret void
}

declare dso_local i32 @pthread_join(i32, i32*) #1

declare dso_local i32 @bfree(%struct.null_output*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
